<resources>
    <string name="app_name">PhaiBay</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="forgot_password">Forgot password </string>
    <string name="sign_up">Sign up</string>
    <string name="dont_have_account">Don\'t have account ?</string>
    <string name="already_have_account">Already have account ?</string>
    <string name="type_phone">Enter your email or phone number</string>
    <string name="confirm">Confirm</string>
</resources>
