<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.example.tuananhe.phaibay.login.LoginModel" />

    </data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border_edit_text_red">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constrain_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/image_logo"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/border_edit_text_gray"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/dp_8"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_logo" />

            <EditText
                android:id="@+id/edit_text_phone"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/border_edit_text_gray"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:paddingStart="@dimen/dp_8"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_email" />

            <EditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/border_edit_text_gray"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="@dimen/dp_8"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_phone" />

            <TextView
                android:id="@+id/text_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="@dimen/dp_8"
                android:onClick="@{()->viewModel.forgotPassword()}"
                android:padding="@dimen/dp_8"
                android:text="@string/forgot_password"
                android:textColor="@color/red_standard"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_password" />

            <Button
                android:id="@+id/button_login"
                android:layout_width="200dp"
                android:layout_height="32dp"
                android:layout_marginTop="84dp"
                android:background="@drawable/button_radius_green"
                android:paddingStart="@dimen/dp_16"
                android:paddingEnd="@dimen/dp_16"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_password" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center_horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_login">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="19dp"
                    android:text="@string/dont_have_account" />

                <TextView
                    android:id="@+id/text_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_8"
                    android:text="@string/sign_up"
                    android:textColor="@color/red_standard" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progress_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>