<?xml version="1.0" encoding="utf-8"?>
<layout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border_edit_text_red">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constrain_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/image_logo"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:text="@string/type_phone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_logo" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="184dp"
                android:text="@string/type_phone"
                app:layout_constraintStart_toStartOf="@+id/pin_otp"
                app:layout_constraintTop_toBottomOf="@+id/image_logo" />

            <EditText
                android:id="@+id/edit_text_input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/border_edit_text_red"
                android:paddingStart="@dimen/dp_8"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <com.chaos.view.PinView
                android:id="@+id/pin_otp"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="96dp"
                android:layout_marginEnd="8dp"
                android:cursorVisible="true"
                android:inputType="number"
                android:padding="@dimen/dp_2"
                android:textColor="@color/red_standard"
                android:textSize="18sp"
                app:cursorWidth="2dp"
                app:hideLineWhenFilled="false"
                app:itemCount="6"
                app:itemHeight="48dp"
                app:itemRadius="4dp"
                app:itemSpacing="@dimen/dp_6"
                app:itemWidth="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_input"
                app:lineColor="@color/red_standard"
                app:viewType="rectangle" />

            <Button
                android:id="@+id/button_login"
                android:layout_width="200dp"
                android:layout_height="27dp"
                android:layout_marginTop="76dp"
                android:background="@drawable/button_radius_green"
                android:paddingStart="@dimen/dp_16"
                android:paddingEnd="@dimen/dp_16"
                android:text="@string/confirm"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pin_otp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center_horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_login">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="19dp"
                    android:text="@string/already_have_account" />

                <TextView
                    android:id="@+id/text_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_8"
                    android:text="@string/login"
                    android:textColor="@color/red_standard" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progress_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>
